# garage_monitor

./: CMakeLists.txt  LICENSE  README.md
inc/: clientConnection.h  messageStructure.h  serverConnection.h
scripts/: build  build_arm  build_gcc  build_test
src/: clientConnection.cpp  garage_client.cpp  garage_server.c  garage_server.cpp  hello.c  messageStructure.cpp  serverConnection.cpp
test/: messageStructureTest.cpp
